--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.23.1"
+		"react-router-dom": "^6.23.1",
+		"reactstrap": "^9.2.2"
 	}
 }
